--- a/app/src/main/res/layout/fragment_listar_tarefa.xml
+++ b/app/src/main/res/layout/fragment_listar_tarefa.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg"
-    android:padding="16dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Listar Tarefas"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal|top"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp" />
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/listViewTarefas"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginBottom="16dp" />
-
-    <Button
-        android:id="@+id/btnAtualizar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Atualizar Lista"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="32dp" />
+        android:layout_height="match_parent" />
 </FrameLayout>
