--- a/app/src/main/res/layout/item_tarefa.xml
+++ b/app/src/main/res/layout/item_tarefa.xml
@@ -1,39 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textTitulo"
+        android:id="@+id/tituloTarefa"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Tarefa"
+        android:textSize="18sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/botaoEditar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:text="Editar" />
 
-    <TextView
-        android:id="@+id/textDescricao"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/botaoDeletar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnEditar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Editar" />
-
-        <Button
-            android:id="@+id/btnDeletar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deletar" />
-    </LinearLayout>
+        android:text="Deletar" />
 </LinearLayout>
