--- a/app/src/main/res/layout/fragment_listar_tarefa.xml
+++ b/app/src/main/res/layout/fragment_listar_tarefa.xml
@@ -6,5 +6,8 @@
     <ListView
         android:id="@+id/listViewTarefas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="30dp"
+        />
 </FrameLayout>
