--- a/app/src/main/res/layout/item_tarefa.xml
+++ b/app/src/main/res/layout/item_tarefa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -10,18 +11,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Tarefa"
+        android:text="@string/tarefa"
         android:textSize="18sp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/botaoEditar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar" />
+        android:text="@string/editar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/botaoDeletar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deletar" />
+        android:text="@string/deletar" />
 </LinearLayout>
